--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Direccion</span></h3>
 										Buenos Aires, Argentina.<br />
-										Provincia -Avellaneda<br />
+										Zona Sur -Avellaneda<br />
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Telefono</span></h3>
