--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							
 						</div>
 						<ul class="actions">
-							<li><a href="" class="button">Portafolio</a></li>
+							<li><a href="images/fulls/curriculum vitae cv 2023.pdf" target="_blank" class="button">Descargar CV</a></li>
 						</ul>
 					</section>
 
@@ -102,8 +102,8 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Direccion</span></h3>
-										Buenos Aires, Argentina.<br />
-										Zona Sur -Avellaneda<br />
+										Buenos Aires, Argentina.<br/>
+										Zona Sur -Avellaneda<br/>
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Telefono</span></h3>
