--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							
 						</div>
 						<ul class="actions">
-							<li><a href="images/fulls/curriculum vitae cv 2023.pdf" target="_blank" class="button">Descargar CV</a></li>
+							<li><a href="images/fulls/CV 2023 Ronald.pdf" target="_blank" class="button">Descargar CV</a></li>
 						</ul>
 					</section>
 
